--- a/styles.css
+++ b/styles.css
@@ -96,12 +96,14 @@ body {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
+
 }
 
 .project-card img {
     height: 80%;
     width: 100%;
     border-radius: 8px;
+
 }
 
 .project-card h3 {
@@ -118,12 +120,13 @@ body {
 }
 
 .project-card {
-    background-color: #bcd9a280;
+    background-color: #B7BDF7;
     padding: 20px 20px 50px 20px;
     border-radius: 8px;
     width: 1fr;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
+
 }
 
 .project-card:hover {
