--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
 }
 
 .navbar {
-    background-color: #ffffff88;
+    background-color: #ffffff;
     display: flex;
     justify-content: space-between;
     align-items: center;
